# controller/Interface.go
@@ -15,3 +15,10 @@ type TypePasienControllerInterface interface {
 	EditTypePasien(data basemodel.TypePasienRequestUpdateBaseModel, id int) (code int, message string)
 	DeleteTypePasien(id int) (code int, message string)
 }
+
+type PesertaBPJSControllerInterface interface {
+	DataPesertaBPJS(pagination basemodel.PesertaBPJSPaginationBaseModel) (code int, data []basemodel.PesertaBPJSWithMedicalRecordBaseModel, count int64, message string)
+	TambahPesertaBPJS(data basemodel.PesertaBPJSRequestInsertBaseModel) (code int, message string)
+	EditPesertaBPJS(data basemodel.PesertaBPJSRequestUpdateBaseModel, id int) (code int, message string)
+	DeletePesertaBPJS(id int) (code int, message string)
+}
